fixed navbar z-index issue

--- a/styles.css
+++ b/styles.css
@@ -100,6 +100,7 @@ nav {
     left: 100%;
     font-family: var(--ubuntu);
     transition: .4s;
+    z-index: 10;
 }
 
 .display-nav {
